--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.3",
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "fractional": "^1.0.0"
   }
 }
